# BarrierLakeOps

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  作品說明.md
backend/: .env.example  .gitignore  Procfile  README.md  lake_catalog.yaml  main.py  pyproject.toml
backend/data/dem/: caoling-1979.json  caoling-1979.npy  jiufenershan-jiucaihu-1999.json  jiufenershan-jiucaihu-1999.npy  jiufenershan-sezikeng-1999.json  jiufenershan-sezikeng-1999.npy  lakesi-meilan-2009.json  lakesi-meilan-2009.npy  mataian-2025.json  mataian-2025.npy  shigupan-1999.json  shigupan-1999.npy  tangbulan-2024.json  tangbulan-2024.npy  xinzhu-taigang-2024.json  xinzhu-taigang-2024.npy  yanzikou-2024.json  yanzikou-2024.npy
backend/data/villages/: population.json  villages.geojson
backend/scripts/: prep_geo.py  prep_geo_dem_downstream.py  sync_from_xlsx.py
backend/src/barrier_lake_ops/: __init__.py  app.py  catalog.py  config.py  data_sync.py  live_sources.py  schemas.py  server.py  sync_job.py
backend/src/barrier_lake_ops/adapters/: __init__.py  cwa.py  dem.py  http.py  moa.py  population.py
backend/src/barrier_lake_ops/agent/: AGENT.md  __init__.py  chat_agent.py  openai_client.py
backend/src/barrier_lake_ops/db/: __init__.py  engine.py  models.py  repository.py
backend/src/barrier_lake_ops/routers/: __init__.py  briefing.py  chat.py  data.py  geo.py  lakes.py
backend/src/barrier_lake_ops/tools/: __init__.py  compose_briefing.py  estimate_inundation.py  explain_flood_cell.py  get_affected_population.py  get_lake_status.py  inundation_runtime.py  (+2 more)
(+39 files in other folders)
