[project]
name = "barrier-lake-ops"
version = "0.1.0"
description = "BarrierLakeOps — 堰湖態勢跨部會研判元件 (FastAPI + MCP, 6 tools)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "shapely>=2.0",
    "numpy>=2.0",
    "pyshp>=2.3",
    "pyproj>=3.6",
    "openai>=1.54",
    "sse-starlette>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "fastmcp>=2.0",
]

[project.scripts]
barrier-lake-ops = "barrier_lake_ops.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/barrier_lake_ops"]

[tool.uv]
package = true
